--- a/docker-compose/server/compose-profile.yml
+++ b/docker-compose/server/compose-profile.yml
@@ -3,6 +3,8 @@ services:
     container_name: profile-server
     image: charitan-go/profile-server
     build: ../../profile-server
+    ports:
+      - 8090:8090
     environment:
       DB_HOST: profile-db
       DB_NAME: profile
@@ -10,7 +12,7 @@ services:
       DB_PASSWORD: secret
       DB_PORT: 5432
       SERVICE_REGISTRY_URI: service-registry:8500
-      SERVICE_ID: profile-server
+      ADDRESS: profile-server
       PORT: 8090
     depends_on:
       profile-db:
