--- a/docker-compose/server/compose-auth.yml
+++ b/docker-compose/server/compose-auth.yml
@@ -12,8 +12,7 @@ services:
       DB_PASSWORD: secret
       DB_PORT: 5432
       SERVICE_REGISTRY_URI: service-registry:8500
-      SERVICE_ID: auth-server
-      PORT: 8090
+      ADDRESS: auth-server
     depends_on:
       auth-db:
         condition: service_healthy
