--- a/docker-compose/server/compose-auth.yml
+++ b/docker-compose/server/compose-auth.yml
@@ -13,6 +13,9 @@ services:
       DB_PORT: 5432
       SERVICE_REGISTRY_URI: service-registry:8500
       ADDRESS: auth-server
+      JWT_EXPIRATION_DURATION: 24h
+      VAULT_ADDR: "http://vault:8200"
+      VAULT_TOKEN: "auth-server-token"
     depends_on:
       auth-db:
         condition: service_healthy
