--- a/docker-compose/compose.yml
+++ b/docker-compose/compose.yml
@@ -1,8 +1,9 @@
 include:
   - ./server/compose-profile.yml
   - ./server/compose-auth.yml
+  - ./server/compose-key.yml
   - ./api-gateway/compose-charitan-api-gateway.yml
-  - ./kms/compose-kms.yml
+  # - ./vault/compose-vault.yml
   - ./service-registry/compose-service-registry.yml
 
 networks:
