add dependency health check

--- a/docker-compose/server/compose-key.yml
+++ b/docker-compose/server/compose-key.yml
@@ -15,5 +15,7 @@ services:
         condition: service_healthy
       message-broker:
         condition: service_healthy
+      auth-server:
+        condition: service_healthy
     networks:
       - charitan-go
