--- a/docker-compose/server/compose-auth.yml
+++ b/docker-compose/server/compose-auth.yml
@@ -21,8 +21,15 @@ services:
         condition: service_healthy
       service-registry:
         condition: service_healthy
+      message-broker:
+        condition: service_healthy
     networks:
       - charitan-go
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8090/health"]
+      interval: 1s
+      timeout: 3s
+      retries: 60
     # env_file: "../../.key.env"
   auth-db:
     image: postgres:alpine
