--- a/docker-compose/server/compose-key.yml
+++ b/docker-compose/server/compose-key.yml
@@ -8,7 +8,8 @@ services:
       ADDRESS: key-server
       MESSAGE_BROKER_USER: rabbitmq
       MESSAGE_BROKER_PASSWORD: secret
-      INIT_KEY_DURATION: 15s
+      # INIT_KEY_DURATION: 15s
+      INIT_KEY_DURATION: 10s
       ROTATE_KEY_DURATION: 1h
     depends_on:
       # key-db:
