--- a/docker-compose/compose.yml
+++ b/docker-compose/compose.yml
@@ -7,6 +7,7 @@ include:
   # - ./vault/compose-vault.yml
   - ./service-registry/compose-service-registry.yml
   - ./message-broker/compose-message-broker.yml
+  - ./mail-server/compose-mail-server.yml
 
 networks:
   charitan-go:
