--- a/docker-compose/compose.yml
+++ b/docker-compose/compose.yml
@@ -1,10 +1,6 @@
 include:
-  - ./server/compose-profile.yml
-  - ./server/compose-auth.yml
-  - ./server/compose-email.yml
-  - ./server/compose-key.yml
+  - ./server/compose.yml
   - ./api-gateway/compose-charitan-api-gateway.yml
-  # - ./vault/compose-vault.yml
   - ./service-registry/compose-service-registry.yml
   - ./message-broker/compose-message-broker.yml
   - ./mail-server/compose-mail-server.yml
