--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "project-server"]
 	path = project-server
 	url = git@github.com:charitan-go/project-server.git
+[submodule "notification-server"]
+	path = notification-server
+	url = git@github.com:charitan-go/notification-server.git
