--- a/docker-compose/redis/compose-redis.yml
+++ b/docker-compose/redis/compose-redis.yml
@@ -1,6 +1,6 @@
 services:
   redis:
-    image: redis:7.4-bookworm
+    image: redis:7.4-alpine
     container_name: redis 
     healthcheck:
       test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
